(WIP) Falta actualizar servicios y controladores relacionados a productos