@@ -1,4 +1,3 @@
-// src/main/java/com/app/GoldenFeets/Service/InventarioService.java
 package com.app.GoldenFeets.Service;
 
 import com.app.GoldenFeets.DTO.EstadisticasInventarioDTO;
@@ -6,18 +5,17 @@ import com.app.GoldenFeets.DTO.HistorialInventarioDTO;
 import com.app.GoldenFeets.DTO.InventarioEntradaDTO;
 import com.app.GoldenFeets.DTO.InventarioSalidaDTO;
 import com.app.GoldenFeets.Entity.*;
-import com.app.GoldenFeets.Repository.InventarioEntradaRepository;
-import com.app.GoldenFeets.Repository.InventarioSalidaRepository;
-import com.app.GoldenFeets.Repository.PedidoRepository;
-import com.app.GoldenFeets.Repository.ProductoRepository;
+import com.app.GoldenFeets.Repository.*;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
-import java.time.LocalDate;
+import java.util.Optional;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Service
@@ -29,249 +27,269 @@ public class InventarioService {
     private final ProductoRepository productoRepository;
     private final PedidoRepository pedidoRepository;
 
+    /**
+     * Registra una entrada de inventario.
+     * Si la variante (Talla/Color) ya existe, suma el stock.
+     * Si no existe, crea una nueva variante asociada al producto.
+     */
     @Transactional
     public InventarioEntrada registrarEntrada(InventarioEntradaDTO entradaDTO) {
-        // --- INICIO DEPURACIÓN ---
-        System.out.println("\n--- DEBUG: Iniciando registrarEntrada ---");
+        System.out.println("--- DEBUG: Iniciando registrarEntrada ---");
         try {
-            // 1. Buscar el producto
-            System.out.println("DEBUG (Entrada): Buscando producto ID: " + entradaDTO.getProductoId());
+            // 1. Buscar el producto padre
             Producto producto = productoRepository.findById(entradaDTO.getProductoId())
                     .orElseThrow(() -> new RuntimeException("Producto no encontrado con ID: " + entradaDTO.getProductoId()));
-            System.out.println("DEBUG (Entrada): Producto encontrado: " + producto.getNombre());
 
-            // 2. Crear la entrada
+            // 2. Normalizar entradas (evitar duplicados por mayúsculas/minúsculas)
+            String colorInput = (entradaDTO.getColor() != null && !entradaDTO.getColor().isEmpty())
+                    ? entradaDTO.getColor().trim() : "Único";
+            String tallaInput = (entradaDTO.getTalla() != null && !entradaDTO.getTalla().isEmpty())
+                    ? entradaDTO.getTalla().trim() : "Única";
+
+            // 3. Buscar si la variante ya existe
+            Optional<ProductoVariante> varianteExistente = producto.getVariantes().stream()
+                    .filter(v -> v.getColor().equalsIgnoreCase(colorInput) && v.getTalla().equalsIgnoreCase(tallaInput))
+                    .findFirst();
+
+            ProductoVariante variante;
+
+            if (varianteExistente.isPresent()) {
+                // Opción A: Actualizar existente
+                variante = varianteExistente.get();
+                variante.setStock(variante.getStock() + entradaDTO.getCantidad());
+                System.out.println("DEBUG: Variante encontrada. Nuevo stock: " + variante.getStock());
+            } else {
+                // Opción B: Crear nueva variante
+                variante = new ProductoVariante();
+                variante.setProducto(producto);
+                variante.setColor(colorInput);
+                variante.setTalla(tallaInput);
+                variante.setStock(entradaDTO.getCantidad());
+                producto.getVariantes().add(variante); // Agregamos a la lista del padre
+                System.out.println("DEBUG: Nueva variante creada: " + tallaInput + " - " + colorInput);
+            }
+
+            // 4. Guardar cambios en Producto (Cascade guardará la variante)
+            productoRepository.save(producto);
+
+            // 5. Crear Registro Histórico de Entrada
             InventarioEntrada nuevaEntrada = new InventarioEntrada();
             nuevaEntrada.setProducto(producto);
             nuevaEntrada.setDistribuidor(entradaDTO.getDistribuidor());
             nuevaEntrada.setCantidad(entradaDTO.getCantidad());
-            nuevaEntrada.setColor(entradaDTO.getColor());
+            // Guardamos el detalle de la variante en el campo 'color' de la tabla histórica o similar
+            // Para mantener compatibilidad con tu tabla actual de entradas que tiene campo 'color':
+            nuevaEntrada.setColor(colorInput + " / " + tallaInput);
 
             if (entradaDTO.getPrecioCostoUnitario() != null) {
                 nuevaEntrada.setPrecioCostoUnitario(entradaDTO.getPrecioCostoUnitario());
-                System.out.println("DEBUG (Entrada): Precio de costo DTO: " + entradaDTO.getPrecioCostoUnitario());
             } else {
-                System.out.println("DEBUG (Entrada): Pre    cio de costo DTO es NULL. Se usará el default 0.0");
+                nuevaEntrada.setPrecioCostoUnitario(0.0);
             }
 
-            // 3. Guardar el registro de la entrada.
-            System.out.println("DEBUG (Entrada): Guardando nuevaEntrada...");
-            inventarioEntradaRepository.save(nuevaEntrada);
-            System.out.println("DEBUG (Entrada): ¡nuevaEntrada GUARDADA! (ID: " + nuevaEntrada.getId() + ")");
-
-            // 4. Actualizar el stock del producto.
-            System.out.println("DEBUG (Entrada): Actualizando stock del producto...");
-            producto.setStock(producto.getStock() + entradaDTO.getCantidad()); // La corrección del typo
-            productoRepository.save(producto);
-            System.out.println("DEBUG (Entrada): ¡Stock del producto ACTUALIZADO!");
-
-            System.out.println("--- DEBUG: registrarEntrada FINALIZADO CON ÉXITO ---");
-            return nuevaEntrada;
+            return inventarioEntradaRepository.save(nuevaEntrada);
 
         } catch (Exception e) {
-            // --- ¡CRÍTICO! Imprime el error ANTES de que el @Transactional lo revierta ---
-            System.err.println("--- ERROR FATAL en registrarEntrada ---");
-            e.printStackTrace(); // Imprime todo el stack trace
-            System.err.println("--------------------------------------");
-            throw e; // Vuelve a lanzar el error para que el rollback ocurra
+            System.err.println("--- ERROR en registrarEntrada ---");
+            e.printStackTrace();
+            throw e;
         }
     }
+
+    /**
+     * Registra una salida manual (pérdida, daño, uso interno).
+     * Requiere especificar Talla y Color en el DTO para descontar de la variante correcta.
+     */
     @Transactional
     public InventarioSalida registrarSalidaManual(InventarioSalidaDTO salidaDTO) {
-        // --- INICIO DEPURACIÓN ---
-        System.out.println("\n--- DEBUG: Iniciando registrarSalidaManual ---");
+        System.out.println("--- DEBUG: Iniciando registrarSalidaManual ---");
         try {
-            // 1. Buscar el producto
-            System.out.println("DEBUG (Salida): Buscando producto ID: " + salidaDTO.getProductoId());
+            // 1. Buscar Producto
             Producto producto = productoRepository.findById(salidaDTO.getProductoId())
-                    .orElseThrow(() -> new RuntimeException("Producto no encontrado con ID: " + salidaDTO.getProductoId()));
+                    .orElseThrow(() -> new RuntimeException("Producto no encontrado"));
 
-            // 2. Validar stock
-            if (producto.getStock() < salidaDTO.getCantidad()) {
-                throw new RuntimeException("Stock insuficiente para el producto: " + producto.getNombre());
+            // 2. Identificar Variante a descontar
+            // Asumimos que el DTO viene con Talla y Color desde el formulario
+            String colorTarget = (salidaDTO.getColor() != null) ? salidaDTO.getColor().trim() : "";
+            String tallaTarget = (salidaDTO.getTalla() != null) ? salidaDTO.getTalla().trim() : "";
+
+            ProductoVariante variante = producto.getVariantes().stream()
+                    .filter(v -> v.getColor().equalsIgnoreCase(colorTarget) && v.getTalla().equalsIgnoreCase(tallaTarget))
+                    .findFirst()
+                    .orElseThrow(() -> new RuntimeException("No se encontró la variante " + tallaTarget + " - " + colorTarget + " para este producto."));
+
+            // 3. Validar Stock
+            if (variante.getStock() < salidaDTO.getCantidad()) {
+                throw new RuntimeException("Stock insuficiente. Disponible: " + variante.getStock() + ", Solicitado: " + salidaDTO.getCantidad());
             }
 
-            // 3. Crear la salida
+            // 4. Descontar y Guardar
+            variante.setStock(variante.getStock() - salidaDTO.getCantidad());
+            productoRepository.save(producto);
+
+            // 5. Registro Histórico
             InventarioSalida nuevaSalida = new InventarioSalida();
             nuevaSalida.setProducto(producto);
             nuevaSalida.setCantidad(salidaDTO.getCantidad());
-            nuevaSalida.setMotivo(salidaDTO.getMotivo());
+            nuevaSalida.setMotivo(salidaDTO.getMotivo() + " [" + tallaTarget + "/" + colorTarget + "]");
 
-            System.out.println("DEBUG (Salida): Guardando nuevaSalida...");
-            inventarioSalidaRepository.save(nuevaSalida);
-            System.out.println("DEBUG (Salida): ¡nuevaSalida GUARDADA! (ID: " + nuevaSalida.getId() + ")");
-
-            // 4. Actualizar el stock del producto.
-            System.out.println("DEBUG (Salida): Actualizando stock del producto...");
-            producto.setStock(producto.getStock() - salidaDTO.getCantidad());
-            productoRepository.save(producto);
-            System.out.println("DEBUG (Salida): ¡Stock del producto ACTUALIZADO!");
-
-            System.out.println("--- DEBUG: registrarSalidaManual FINALIZADO CON ÉXITO ---");
-            return nuevaSalida;
+            return inventarioSalidaRepository.save(nuevaSalida);
 
         } catch (Exception e) {
-            // --- ¡CRÍTICO! Imprime el error ANTES de que el @Transactional lo revierta ---
-            System.err.println("--- ERROR FATAL en registrarSalidaManual ---");
-            e.printStackTrace(); // Imprime todo el stack trace
-            System.err.println("-----------------------------------------");
-            throw e; // Vuelve a lanzar el error
+            System.err.println("--- ERROR en registrarSalidaManual ---");
+            e.printStackTrace();
+            throw e;
         }
     }
 
-    // (Dejamos este método igual, ya estaba bien)
+    /**
+     * Registra salida automática por venta (Checkout).
+     * Usa el objeto PedidoDetalle que ya tiene vinculada la ProductoVariante.
+     */
     @Transactional
     public InventarioSalida registrarSalidaPorVenta(PedidoDetalle detalle) {
         Producto producto = detalle.getProducto();
-        Integer cantidad = detalle.getCantidad();
-        if (producto.getStock() < cantidad) {
-            throw new RuntimeException("Stock insuficiente para: " + producto.getNombre());
+        ProductoVariante variante = detalle.getProductoVariante();
+
+        // Validación de seguridad (aunque PedidoService ya debió validar)
+        if (variante == null) {
+            throw new RuntimeException("Error crítico: El detalle del pedido no tiene variante asignada.");
         }
+
+        Integer cantidad = detalle.getCantidad();
+        if (variante.getStock() < cantidad) {
+            throw new RuntimeException("Stock insuficiente para confirmar venta: " + producto.getNombre() + " (" + variante.getTalla() + ")");
+        }
+
+        // Descontar Stock
+        variante.setStock(variante.getStock() - cantidad);
+        productoRepository.save(producto);
+
+        // Registro Histórico
         InventarioSalida nuevaSalida = new InventarioSalida();
         nuevaSalida.setProducto(producto);
         nuevaSalida.setCantidad(cantidad);
-        nuevaSalida.setMotivo("Venta");
+        nuevaSalida.setMotivo("Venta Web");
         nuevaSalida.setPedido(detalle.getPedido());
-        inventarioSalidaRepository.save(nuevaSalida);
-        producto.setStock(producto.getStock() - cantidad);
-        productoRepository.save(producto);
-        return nuevaSalida;
+
+        return inventarioSalidaRepository.save(nuevaSalida);
     }
+
+    /**
+     * Obtiene historial combinado de entradas y salidas.
+     */
     @Transactional(readOnly = true)
     public List<HistorialInventarioDTO> getHistorialUnificado(
             LocalDate fechaDesde, LocalDate fechaHasta, String productoNombre, String tipo
     ) {
-        System.out.println("\n--- DEBUG: Iniciando getHistorialUnificado (Arreglo ImmutableList) ---");
         List<HistorialInventarioDTO> historial = new ArrayList<>();
 
-        // 1. Obtener entradas (CON LA NUEVA CONSULTA)
+        // 1. Procesar Entradas
         List<InventarioEntrada> entradas = inventarioEntradaRepository.findAllWithProducto();
-        System.out.println("DEBUG (Lectura): Entradas encontradas (con fetch): " + entradas.size());
-
         for (InventarioEntrada e : entradas) {
-            // ... (Tu lógica de mapeo de entrada se queda igual)
-            if (e == null || e.getFechaRegistro() == null) continue;
+            if (e.getFechaRegistro() == null) continue;
+
             HistorialInventarioDTO dto = new HistorialInventarioDTO();
             dto.setFecha(e.getFechaRegistro());
-            dto.setProductoNombre(e.getProducto() != null ? e.getProducto().getNombre() : "Producto Desconocido");
+            dto.setProductoNombre(e.getProducto() != null ? e.getProducto().getNombre() : "Producto Eliminado");
             dto.setTipo("Entrada");
             dto.setCantidad(e.getCantidad());
-            dto.setDescripcion("Distribuidor: " + (e.getDistribuidor() != null ? e.getDistribuidor() : "N/A"));
-            Double costoUnitario = (e.getPrecioCostoUnitario() != null) ? e.getPrecioCostoUnitario() : 0.0;
-            dto.setPrecioUnitario(costoUnitario);
-            dto.setValorMonetario((e.getCantidad() != null ? e.getCantidad() : 0) * costoUnitario);
+            dto.setDescripcion("Prov: " + (e.getDistribuidor() != null ? e.getDistribuidor() : "N/A") +
+                    (e.getColor() != null ? " (" + e.getColor() + ")" : ""));
+
+            Double costo = (e.getPrecioCostoUnitario() != null) ? e.getPrecioCostoUnitario() : 0.0;
+            dto.setPrecioUnitario(costo);
+            dto.setValorMonetario(e.getCantidad() * costo);
+
             historial.add(dto);
         }
 
-        // 2. Obtener salidas (CON LA NUEVA CONSULTA)
+        // 2. Procesar Salidas
         List<InventarioSalida> salidas = inventarioSalidaRepository.findAllWithPedidoAndDetalles();
-        System.out.println("DEBUG (Lectura): Salidas encontradas (con fetch): " + salidas.size());
-
         for (InventarioSalida s : salidas) {
-            // ... (Tu lógica de mapeo de salida se queda igual)
-            if (s == null || s.getFechaRegistro() == null) continue;
+            if (s.getFechaRegistro() == null) continue;
+
             HistorialInventarioDTO dto = new HistorialInventarioDTO();
             dto.setFecha(s.getFechaRegistro());
-            dto.setProductoNombre(s.getProducto() != null ? s.getProducto().getNombre() : "Producto Desconocido");
+            dto.setProductoNombre(s.getProducto() != null ? s.getProducto().getNombre() : "Producto Eliminado");
             dto.setTipo("Salida");
             dto.setCantidad(s.getCantidad());
 
             if (s.getPedido() != null) {
-                Pedido pedido = s.getPedido(); // ¡Esto ya está cargado!
-                dto.setPedidoId(pedido.getId());
-                dto.setDescripcion("Venta (Pedido #" + pedido.getId() + ")");
+                // Es una venta
+                dto.setPedidoId(s.getPedido().getId());
+                dto.setDescripcion("Venta #" + s.getPedido().getId());
 
-                if (pedido.getDetalles() != null && !pedido.getDetalles().isEmpty()) {
-                    PedidoDetalle detalle = pedido.getDetalles().stream()
-                            .filter(d -> d != null && d.getProducto() != null && s.getProducto() != null && d.getProducto().getId().equals(s.getProducto().getId()))
+                // Intentar obtener precio de venta del detalle
+                double precioVenta = 0.0;
+                if (s.getPedido().getDetalles() != null) {
+                    precioVenta = s.getPedido().getDetalles().stream()
+                            .filter(d -> d.getProducto().getId().equals(s.getProducto().getId()))
                             .findFirst()
-                            .orElse(null);
-
-                    if (detalle != null && detalle.getPrecioUnitario() != null) {
-                        dto.setPrecioUnitario(detalle.getPrecioUnitario());
-                        dto.setValorMonetario((s.getCantidad() != null ? s.getCantidad() : 0) * detalle.getPrecioUnitario());
-                    } else {
-                        dto.setPrecioUnitario(0.0);
-                        dto.setValorMonetario(0.0);
-                    }
-                } else {
-                    dto.setPrecioUnitario(0.0);
-                    dto.setValorMonetario(0.0);
+                            .map(PedidoDetalle::getPrecioUnitario)
+                            .orElse(0.0);
                 }
+                dto.setPrecioUnitario(precioVenta);
+                dto.setValorMonetario(s.getCantidad() * precioVenta);
             } else {
-                dto.setDescripcion(s.getMotivo() != null ? s.getMotivo() : "Salida Manual/Ajuste");
+                // Es manual
+                dto.setDescripcion(s.getMotivo());
                 dto.setPrecioUnitario(0.0);
                 dto.setValorMonetario(0.0);
             }
             historial.add(dto);
         }
 
-        // --- FILTRADO ---
+        // 3. Filtrar y Ordenar
         Stream<HistorialInventarioDTO> stream = historial.stream();
 
         if (fechaDesde != null) {
-            stream = stream.filter(h -> h.getFecha() != null && !h.getFecha().toLocalDate().isBefore(fechaDesde));
+            stream = stream.filter(h -> !h.getFecha().toLocalDate().isBefore(fechaDesde));
         }
         if (fechaHasta != null) {
-            stream = stream.filter(h -> h.getFecha() != null && !h.getFecha().toLocalDate().isAfter(fechaHasta));
+            stream = stream.filter(h -> !h.getFecha().toLocalDate().isAfter(fechaHasta));
         }
-        if (productoNombre != null && !productoNombre.trim().isEmpty()) {
-            String lowerProducto = productoNombre.trim().toLowerCase();
-            stream = stream.filter(h -> h.getProductoNombre() != null && h.getProductoNombre().toLowerCase().contains(lowerProducto));
+        if (productoNombre != null && !productoNombre.isBlank()) {
+            String term = productoNombre.toLowerCase();
+            stream = stream.filter(h -> h.getProductoNombre().toLowerCase().contains(term));
         }
-        if (tipo != null && !tipo.isEmpty()) {
-            stream = stream.filter(h -> h.getTipo() != null && h.getTipo().equalsIgnoreCase(tipo));
+        if (tipo != null && !tipo.isBlank()) {
+            stream = stream.filter(h -> h.getTipo().equalsIgnoreCase(tipo));
         }
 
-        // --- ¡AQUÍ ESTÁ EL ARREGLO, MI PANA! ---
-
-        // 3. Ordenar DENTRO del stream
-        List<HistorialInventarioDTO> historialFiltrado = stream
-                .sorted(Comparator.comparing(HistorialInventarioDTO::getFecha).reversed()) // <-- ¡ORDENAMOS AQUÍ!
-                .toList(); // Y ahora sí lo volvemos lista
-
-        // ¡Y BORRAMOS LA LÍNEA QUE SE REVENTABA!
-        // historialFiltrado.sort(Comparator.comparing(HistorialInventarioDTO::getFecha).reversed());  <-- ¡ESTA SE VA!
-
-        System.out.println("DEBUG (Lectura): Total items en historial (filtrado y ordenado): " + historialFiltrado.size());
-
-        return historialFiltrado;
+        return stream
+                .sorted(Comparator.comparing(HistorialInventarioDTO::getFecha).reversed())
+                .collect(Collectors.toList());
     }
 
+    /**
+     * Calcula estadísticas financieras básicas.
+     */
     @Transactional(readOnly = true)
-    public EstadisticasInventarioDTO getEstadisticasInventario(
-            LocalDate fechaDesde, LocalDate fechaHasta
-    ) {
-        System.out.println("\n--- DEBUG: Iniciando getEstadisticasInventario (CON FETCH JOINS) ---");
+    public EstadisticasInventarioDTO getEstadisticasInventario(LocalDate fechaDesde, LocalDate fechaHasta) {
         EstadisticasInventarioDTO stats = new EstadisticasInventarioDTO();
 
-        // --- CÁLCULO SEGURO DE GASTADO (CON NUEVA CONSULTA) ---
-        Stream<InventarioEntrada> entradasStream = inventarioEntradaRepository.findAllWithProducto().stream();
+        // Calcular Gastos (Entradas)
+        List<InventarioEntrada> entradas = inventarioEntradaRepository.findAllWithProducto();
+        double totalGastado = entradas.stream()
+                .filter(e -> e.getFechaRegistro() != null)
+                .filter(e -> fechaDesde == null || !e.getFechaRegistro().toLocalDate().isBefore(fechaDesde))
+                .filter(e -> fechaHasta == null || !e.getFechaRegistro().toLocalDate().isAfter(fechaHasta))
+                .mapToDouble(e -> (e.getCantidad() * (e.getPrecioCostoUnitario() != null ? e.getPrecioCostoUnitario() : 0.0)))
+                .sum();
 
-        if (fechaDesde != null) {
-            entradasStream = entradasStream.filter(e -> e.getFechaRegistro() != null && !e.getFechaRegistro().toLocalDate().isBefore(fechaDesde));
-        }
-        if (fechaHasta != null) {
-            entradasStream = entradasStream.filter(e -> e.getFechaRegistro() != null && !e.getFechaRegistro().toLocalDate().isAfter(fechaHasta));
-        }
-        double totalGastado = entradasStream.mapToDouble(e -> (e.getCantidad() != null && e.getPrecioCostoUnitario() != null) ? e.getCantidad() * e.getPrecioCostoUnitario() : 0.0).sum();
+        // Calcular Ingresos (Pedidos Pagados)
+        List<Pedido> pedidos = pedidoRepository.findAllByEstado(EstadoPedido.PAGADO); // Asegúrate que tu Enum tenga PAGADO
+        double totalIngresado = pedidos.stream()
+                .filter(p -> p.getFechaCreacion() != null)
+                .filter(p -> fechaDesde == null || !p.getFechaCreacion().toLocalDate().isBefore(fechaDesde))
+                .filter(p -> fechaHasta == null || !p.getFechaCreacion().toLocalDate().isAfter(fechaHasta))
+                .mapToDouble(p -> p.getTotal() != null ? p.getTotal() : 0.0)
+                .sum();
+
         stats.setTotalGastado(totalGastado);
-        System.out.println("DEBUG (Stats): Total Gastado (Filtrado): " + totalGastado);
-
-        // --- CÁLCULO SEGURO DE INGRESADO (CON NUEVA CONSULTA) ---
-        // Usamos el EstadoPedido.PAGADO, ¡asegúrate que exista en tu Enum!
-        List<Pedido> pedidos = pedidoRepository.findAllByEstado(EstadoPedido.PAGADO);
-        Stream<Pedido> pedidosStream = pedidos.stream();
-
-        if (fechaDesde != null) {
-            pedidosStream = pedidosStream.filter(p -> p.getFechaCreacion() != null && !p.getFechaCreacion().toLocalDate().isBefore(fechaDesde));
-        }
-        if (fechaHasta != null) {
-            pedidosStream = pedidosStream.filter(p -> p.getFechaCreacion() != null && !p.getFechaCreacion().toLocalDate().isAfter(fechaHasta));
-        }
-        double totalIngresado = pedidosStream.mapToDouble(p -> (p.getTotal() != null) ? p.getTotal() : 0.0).sum();
         stats.setTotalIngresado(totalIngresado);
-        System.out.println("DEBUG (Stats): Total Ingresado (Filtrado): " + totalIngresado);
+        stats.setBeneficioNeto(totalIngresado - totalGastado);
 
         return stats;
     }
